# platform-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  Dockerfile.optimized  README.md  docker-compose.production.yml  generate-test-certs.sh  nginx.conf  test_emissions_routes.sh
bins/platform-api-server/: Cargo.toml
bins/platform-api-server/src/: main.rs  tls.rs
crates/api/: Cargo.toml
crates/api-core/: Cargo.toml
crates/api-core/src/: lib.rs  state.rs
crates/api/src/: background.rs  challenge_migrations.rs  compose_hash.rs  job_distributor.rs  lib.rs  redis_client.rs  security.rs  state.rs
crates/api/src/challenge_runner/: challenge_orchestrator.rs  challenge_ws.rs  cvm_manager.rs  migrations.rs  mod.rs  monitoring.rs  runner_core.rs
crates/api/src/challenge_runner/cvm_manager/: core.rs  credentials.rs  deployment.rs  execution.rs  health_checker.rs  info.rs  logging.rs  migration.rs  monitoring.rs
crates/api/src/challenge_runner/migrations/: backup_manager.rs  core.rs  migration_executor.rs  migration_filter.rs  migration_loader.rs  migration_tracker.rs  schema_manager.rs
crates/api/src/challenge_runner/runner/: mod.rs  runner.rs  types.rs
crates/api/src/challenge_runner/ws/: attestation.rs  client.rs  connection.rs  encryption.rs  message_loop.rs  messages.rs  migration_handler.rs  mod.rs  tdx.rs  types.rs  validator_manager.rs  validators.rs
crates/api/src/handlers/: attestation.rs  challenge.rs  config.rs  emission.rs  job.rs  mod.rs
crates/api/src/middleware/: mod.rs  security.rs  tls.rs
crates/api/src/models/: job_cache.rs  mod.rs
crates/api/src/orm_gateway/: mod.rs  permissions.rs  query_executor.rs  query_validator.rs
crates/api/src/routes/: artifacts.rs  attestation.rs  challenge_credentials.rs  challenge_proxy.rs  challenges.rs  challenges.rs.backup  config.rs  emissions.rs  health.rs  jobs.rs  jobs_mod.rs  lib.rs  mechanisms.rs  metagraph.rs  mod.rs  network.rs  nodes.rs  orm.rs  pools.rs  results.rs  ui.rs  validators.rs  websocket.rs
crates/api/src/routes/challenges/: active.rs  crud.rs  debug.rs  emissions.rs  env_vars.rs  get.rs  jobs.rs  list.rs  mod.rs  specs.rs
crates/api/src/routes/jobs/: job_management.rs  job_monitoring.rs  job_results.rs
crates/api/src/routes/websocket/: auth.rs  authentication.rs  connection_manager.rs  handler.rs  message_handler.rs  messages.rs  mod.rs  orm.rs  utils.rs
crates/api/src/routes/websocket/handlers/: authentication.rs  messages.rs  mod.rs
crates/api/src/services/: bittensor.rs  dstack_verifier.rs  mod.rs
crates/attestation/: Cargo.toml
crates/attestation/src/: config.rs  lib.rs  mock_tdx.rs  verifier.rs
crates/autoscaler/src/: lib.rs
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs
crates/challenge-runner/: Cargo.toml
crates/challenge-runner/src/: cvm.rs  lib.rs  migrations.rs  runner.rs
crates/config/: Cargo.toml
crates/config/src/: environment.rs  lib.rs  loader.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encryption.rs  hashing.rs  lib.rs  signatures.rs
crates/kbs/src/: lib.rs
crates/models/src/: attestation.rs  challenge.rs  config.rs  emissions.rs  errors.rs  job.rs  lib.rs  pool.rs  vm_compose.rs
crates/orm-gateway/: Cargo.toml
crates/orm-gateway/src/: lib.rs  mod_rs.rs  permissions.rs  query_validator.rs
crates/orm-gateway/src/executor/: execute.rs  mod.rs  modify.rs  select.rs  types.rs  utils.rs
crates/routes/: Cargo.toml
crates/routes/src/: artifacts.rs  attestation.rs  challenge_credentials.rs  challenge_proxy.rs  config.rs  emissions.rs  health.rs  lib.rs  mechanisms.rs  metagraph.rs  mod_rs.rs  network.rs  nodes.rs  orm.rs  pools.rs  results.rs  ui.rs  validators.rs
crates/routes/src/challenges/: mod.rs  types.rs
crates/routes/src/challenges/handlers/: crud.rs  debug.rs  env_vars.rs  jobs.rs  mod.rs  public.rs  query.rs
crates/routes/src/jobs/: mod.rs  types.rs
crates/routes/src/jobs/handlers/: challenge.rs  crud.rs  lifecycle.rs  logs.rs  mod.rs  progress.rs
crates/routes/src/websocket/: auth.rs  handler.rs  mod.rs  orm.rs
crates/routes/src/websocket/handlers/: auth_flow.rs  entry.rs  types.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: capacity.rs  lib.rs  lib_new.rs  rows.rs  scoring.rs  service.rs  types.rs
crates/scheduler/src/jobs/: claim.rs  create.rs  lifecycle.rs  mod.rs  query.rs
crates/storage/migrations/: 005_create_jobs_table.sql  007_create_pool_and_node_tables.sql  008_create_platform_config_table.sql  009_create_challenge_env_vars_table.sql  010_create_vm_compose_configs_table.sql  011_add_required_env_to_vm_compose_configs.sql
crates/storage/src/: artifacts.rs  config.rs  encryption.rs  lib.rs  postgres.rs
crates/storage/src/postgres/: challenges.rs  emissions.rs  mod.rs  nodes.rs  pools.rs  rows.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: client.rs  encryption.rs  handlers.rs  lib.rs  messages.rs  server.rs  tdx_verification.rs
docs/: architecture.md  security.md  tdx-configuration.md  tdx-simulation-mode.md
examples/: verify-validator.sh
scripts/: start-with-verifier.sh
tests/: attestation_tests.rs  challenge_runner_tests.rs  orm_gateway_tests.rs  security_tdx_tests.rs
tests/integration/: test_attestation_flow.rs  test_challenge_env_vars.rs  test_challenge_lifecycle_complete.rs  test_job_distribution.rs
tests/unit/: test_orm_security.rs
