[package]
name = "platform-api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "platform-api-server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
platform-api = { path = "../../crates/api" }
platform-api-models = { workspace = true }
platform-api-storage = { workspace = true }
platform-api-attestation = { workspace = true }
platform-api-kbs = { workspace = true }
platform-api-scheduler = { workspace = true }
platform-api-builder = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
hex = "0.4"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# CLI
clap = { version = "4.0", features = ["derive"] }

# TLS and RA-TLS
tokio-rustls = "0.24"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "1.0"
dcap-qvl = "0.3"
x509-parser = "0.16"
hyper = { version = "1.7.0", features = ["server"] }
hyper-util = { version = "0.1.17", features = ["http1", "tokio"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }


