[package]
name = "platform-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
platform-api-models = { workspace = true }
platform-api-storage = { workspace = true }
platform-api-attestation = { workspace = true }
platform-api-kbs = { workspace = true }
platform-api-scheduler = { workspace = true }
platform-api-builder = { workspace = true }
platform-api-orm-gateway = { workspace = true }
# platform-api-routes removed - routes are now in api crate

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
tempfile = "3.10"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client
reqwest = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }

# WebSocket client
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
sha2 = "0.10"

# Cryptography
ed25519-dalek = "2.1"
rand = "0.8"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
hkdf = "0.12"
url = "2.5"


# Substrate for signature verification
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# Bittensor SDK for metagraph sync
bittensor-rs = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }
serde_yaml = "0.9"

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid"] }

# Redis
redis = { workspace = true }

# Dstack types
dstack-types = { workspace = true }

