[package]
name = "platform-api-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Cryptography
ring = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"

# Substrate for signature verification
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# Utilities
base64 = "0.22"

