[package]
name = "platform-api-websocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
platform-api-models = { workspace = true }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# WebSocket
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
hkdf = "0.12"
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
ring = { workspace = true }
base64 = "0.22"

